tests/golden/infer/error/let_rec_mutual.ziku
let rec isEven = \n => if n == 0 then true else isOdd (n - 1) in
let rec isOdd = \n => if n == 0 then false else isEven (n - 1) in
isEven 4